--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Wed Nov 21 19:41:48 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tracer.c: Revert to original algorithm.
+
 Wed Nov 21 10:47:35 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* tracer.c: Include flags.
