* invoke.texi: (-fweb, -dZ): Document. 	(-O3): Document that -fweb is enabled. 	* passes.texi (web construction pass): Document.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47288 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+Fri Nov 23 14:42:40 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* invoke.texi: (-fweb, -dZ): Document.
+	(-O3): Document that -fweb is enabled.
+	* passes.texi (web construction pass): Document.
+
 Thu Nov 22 16:51:20 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	Mainline merger (cfg-merger-20011122 tag).
