2001-11-23  Toon Moene  <toon@moene.indiv.nluug.nl>
	PR libf2c/4930
	* libF77/Makefile.in: Compile z_log.c with -ffloat-store.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47294 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/libF77/Makefile.in
+++ b/libf2c/libF77/Makefile.in
@@ -147,6 +147,7 @@ z_cos.lo: z_cos.c
 z_div.lo: z_div.c
 z_exp.lo: z_exp.c
 z_log.lo: z_log.c
+	@LIBTOOL@ --mode=compile $(CC) -c -DSkip_f2c_Undefs $(ALL_CFLAGS) -ffloat-store $<
 z_sin.lo: z_sin.c
 z_sqrt.lo: z_sqrt.c
 r_abs.lo: r_abs.c
