* toplev.c (rest_of_compilation): Call 	find_exception_handler_labels. 	Patch by Jan Hubicka.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47317 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+2001-11-25  Andreas Jaeger  <aj@suse.de>
+
+	* toplev.c (rest_of_compilation): Call
+	find_exception_handler_labels.
+	Patch by Jan Hubicka <jh@suse.cz>.
+
 Thu Nov 15 11:29:10 CET 2001  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 	
 	* Makefile.in (stmt.o): Add predict.h dependency.
