* cfganal.c (flow_dfs_compute_reverse_add_bb): set visited bit. 	(flow_dfs_compute_reverse_execute): Add only unvisited blocks.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47340 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Mon Nov 26 11:48:57 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfganal.c (flow_dfs_compute_reverse_add_bb): set visited bit.
+	(flow_dfs_compute_reverse_execute): Add only unvisited blocks.
+
 2001-11-25  Andreas Jaeger  <aj@suse.de>
 
 	* toplev.c (rest_of_compilation): Call
