* sibcall.c (optimize_sibling_and_tail_recursive_call): Kill 	NOTE_INSN_RETURN and NOTE_INSN_PREDICTION leaked to the code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47341 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Mon Nov 26 11:53:36 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* sibcall.c (optimize_sibling_and_tail_recursive_call): Kill
+	NOTE_INSN_RETURN and NOTE_INSN_PREDICTION leaked to the code.
+
 Mon Nov 26 11:48:57 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfganal.c (flow_dfs_compute_reverse_add_bb): set visited bit.
