* c-common.h (GOTO_FAKE_P): New macro. 	* tree-inline.c (GOTO_FAKE_P): Set. 	* c-tree.texi (GOTO_FAKE_P): Document. 	* Makefile.in (c-semantics.o): Add predict.h dependency. 	(stmt.o): Fix predict.h depdendency.
	* c-semantics.c: Include predict.h;
	(expand_stmt): Drop prediction on goto.
	* predict.c (preocess_note_predictions): Fix formating.
	* predict.def (PRED_CONTINUE, PRED_NEGATIVE_RETURN): New predictors.
	* stmt.c (maybe_error_return): Kill.
	(return_prediction): New.
	(expand_goto): Do not generate predictions.
	(expand_continue_loop): Do generate prediction.
	(expand_null_return): Do not generate predictions.
	(expand_value_return): Use return_prediction.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47342 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,22 @@
+Mon Nov 26 12:53:11 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* c-common.h (GOTO_FAKE_P): New macro.
+	* tree-inline.c (GOTO_FAKE_P): Set.
+	* c-tree.texi (GOTO_FAKE_P): Document.
+	* Makefile.in (c-semantics.o): Add predict.h dependency.
+	(stmt.o): Fix predict.h depdendency.
+
+	* c-semantics.c: Include predict.h;
+	(expand_stmt): Drop prediction on goto.
+	* predict.c (preocess_note_predictions): Fix formating.
+	* predict.def (PRED_CONTINUE, PRED_NEGATIVE_RETURN): New predictors.
+	* stmt.c (maybe_error_return): Kill.
+	(return_prediction): New.
+	(expand_goto): Do not generate predictions.
+	(expand_continue_loop): Do generate prediction.
+	(expand_null_return): Do not generate predictions.
+	(expand_value_return): Use return_prediction.
+
 Mon Nov 26 11:53:36 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* sibcall.c (optimize_sibling_and_tail_recursive_call): Kill
