* ifcvt.c (process_double_test_block): Fix negative counts.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47343 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Mon Nov 26 13:37:24 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* ifcvt.c (process_double_test_block): Fix negative counts.
+
 Mon Nov 26 12:53:11 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* c-common.h (GOTO_FAKE_P): New macro.
