* ifcvt.c: Include optabs.h 	(num_possible_double_test_blocks, num_updated_double_test_blocks, 	num_removed_blocks_double_test): New static variables. 	(double_test_info): New structure. 	(nonzero_test, double_test_ior_and, m1_test_find_double_test_blocks, 	process_double_test_block, block_side_effects_p): New static functions. 	(if_convert): Compute statistics. 	(find_if_header): Call find_double_test_block.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47344 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,14 @@
+Mon Nov 26 13:52:12 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* ifcvt.c: Include optabs.h
+	(num_possible_double_test_blocks, num_updated_double_test_blocks,
+	num_removed_blocks_double_test): New static variables.
+	(double_test_info): New structure.
+	(nonzero_test, double_test_ior_and, m1_test_find_double_test_blocks,
+	process_double_test_block, block_side_effects_p): New static functions.
+	(if_convert): Compute statistics.
+	(find_if_header): Call find_double_test_block.
+
 Mon Nov 26 13:37:24 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* ifcvt.c (process_double_test_block): Fix negative counts.
