* Make-lang.in (gnatbind, gnatmake, gnatbl, gnatchop, gnatcmd,         gnatlink, gnatkr, gnatls, gnatmem, gnatprep, gnatpsta, gnatpsys,         gnatxref, gnatfind, gnatlbr): Depend on CONFIG_H and prefix.o.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47358 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -76,65 +76,65 @@ gnat1$(exeext): prefix.o attribs.o $(LIBDEPS) $(BACKEND) force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnat1$(exeext)
 
-gnatbind$(exeext): force
+gnatbind$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatbind$(exeext)
 
-gnatmake$(exeext): force
+gnatmake$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatmake$(exeext)
 
-gnatbl$(exeext): force
+gnatbl$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatbl$(exeext)
 
-gnatchop$(exeext): force
+gnatchop$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatchop$(exeext)
 
-gnatcmd$(exeext): force
+gnatcmd$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatcmd$(exeext)
 
-gnatlink$(exeext): force
+gnatlink$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatlink$(exeext)
 
-gnatkr$(exeext): force
+gnatkr$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatkr$(exeext)
 
-gnatls$(exeext): force
+gnatls$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatls$(exeext)
 
-gnatmem$(exeext): force
+gnatmem$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatmem$(exeext)
 
-gnatprep$(exeext): force
+gnatprep$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatprep$(exeext)
 
-gnatpsta$(exeext): force
+gnatpsta$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatpsta$(exeext)
 
-gnatpsys$(exeext): force
+gnatpsys$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatpsys$(exeext)
 
-gnatxref$(exeext): force
+gnatxref$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatxref$(exeext)
 
-gnatfind$(exeext): force
+gnatfind$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatfind$(exeext)
 
 # Gnatlbr is extra tool only used on VMS
 
-gnatlbr$(exeext): force
+gnatlbr$(exeext): $(CONFIG_H) prefix.o force
 	$(MAKE) -C ada $(FLAGS_TO_PASS) $(ADA_FLAGS_TO_PASS) \
 		../gnatlbr$(exeext)
 
