* cppfiles.c (stack_include_file): Don't optimize zero-length 	files. 	(read_include_file): NUL-terminate read files. 	* cpplex.c (handle_newline, skip_escaped_newlines, 	get_effective_char, skip_whitespace, parse_identifier, 	parse_identifier_slow, parse_number, parse_string, 	_cpp_lex_direct): Optimize for the fact that buffers are guaranteed 	NUL-terminated. 	* cpplib.c (destringize_and_run, cpp_define, handle_assertion): 	Be sure buffers are NUL terminated. 	* cppmacro.c (warn_of_redefinition): Kill compile warning.
	* c-common.c: Include tree-inline.h.
	(c_language): Move separate definitions here.
	(c_common_init_options, c_common_post_options): New.
	(c_common_lang_init): Rename c_common_init.
	* c-common.h (c_common_lang_init): Similarly.
	(c_common_init_options, c_common_post_options): New.
	* c-lang.c (c_post_options): Move body to c_common_post_options.
	(c_init_options): Use c_common_init_options.
	(c_init): Update.
	* langhooks.def: Rearrange.
	* langhooks.h: Rearrange, and improve comments.
	* toplev.c (do_compile): New function.
	(toplev_main): Use it.
	(lang_independent_f_options, parse_options_and_default_flags,
	process_options): Remove trailing periods.
	* Makefile.in: Update.
cp:	* decl2.c (c_language): Move to c-common.c.
	* lex.c (cxx_post_options, cxx_init_options): Use c-common.c
	functions.
	(cxx_init): Update.
objc:	* objc-act.c (objc_post_options, objc_init_options): Use c-common.c
	functions.
	(ojbc_init): Update.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47362 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1250,7 +1250,7 @@ s-under: $(GCC_PASSES)
 c-common.o : c-common.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(OBSTACK_H) \
 	$(C_COMMON_H) flags.h toplev.h output.h c-pragma.h $(RTL_H) $(GGC_H) \
 	$(EXPR_H) $(TM_P_H) builtin-types.def builtin-attrs.def $(TARGET_H) \
-	diagnostic.h
+	diagnostic.h tree-inline.h
 
 # A file used by all variants of C and some other languages.
 
