* predict.c (estimate_probability): Refine pointer heuristic; 	split opcode into multiple heuristics. 	* predict.def (PRED_OPCODE_POSITIVE, PRED_OPCODE_NONZERO, 	PRED_OPCODE_NONEQUAL, PRED_FPOPCODE): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47363 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Tue Nov 27 01:07:51 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (estimate_probability): Refine pointer heuristic;
+	split opcode into multiple heuristics.
+	* predict.def (PRED_OPCODE_POSITIVE, PRED_OPCODE_NONZERO,
+	PRED_OPCODE_NONEQUAL, PRED_FPOPCODE): New.
+
 Mon Nov 26 13:52:12 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* ifcvt.c: Include optabs.h
