* Makefile.in (c-lang.o): Depends on langhooks-def.h. 	(expr.o, varasm.o): Depends on langhooks.h. 	* c-common.c (c_safe_from_p): Always declare. 	(c_expand_expr): Refine when declared. 	* c-lang.c (c-common.h): Now include. 	(LANG_HOOKS_SAFE_FROM_P): Define new hook. 	(c_init): Don't set lang_safe_from_expr. 	* expr.c (langhooks.h): Now include. 	(lang_safe_from_p): No longer define. 	(safe_from_p): Use lang hook. 	(expand_expr): Set IGNORE if VOID_TYPE result of VIEW_CONVERT_EXPR too. 	(expand_expr, case VIEW_CONVERT_EXPR): Pass ro_modifier down. 	* expr.h (lang_expand_constant, lang_safe_from_p): Delete. 	* langhooks-def.h (lhd_return_tree, lhd_safe_from_p): New decls. 	(LANG_HOOKS_EXPAND_CONSTANT, LANG_HOOKS_SAFE_FROM_P): New hooks. 	* langhooks.c (lhd_return_tree, lhd_safe_from_p): New functions. 	* langhooks.h (struct lang_hooks): New fields expand_constant 	and safe_from_p. 	* output.h (output_constant): Size arg is HOST_WIDE_INT. 	* stmt.c (expand_decl_init): No longer need to expand constant 	for CONST_DECL. 	* stor-layout.c (put_pending_size): Don't check for SAVE_EXPR. 	* toplev.c (lang_expand_constant): Delete var. 	* tree.c (save_expr): Don't put another SAVE_EXPR around simple 	operations on SAVE_EXPR. 	* varasm.c (langhooks.h): Now include. 	(compare_constant_1): Use lang_hooks, not lang_expand_constant. 	(record_constant_1, output_addressed_constants): Likewise. 	(initializer_constant_valid_p, output_constant): Likewise. 	(output_constant_def): Process no-defer of string constant. 	(output_addressed_constants, case ADDR_EXPR): Use handled_component_p. 	(output_constant): Strip more conversions. 	Track our size and pad for the rest. 	(array_size_for_constructor): Remove code for non-byte STRING_CST. 	(output_constructor): SIZE now HOST_WIDE_INT. 	* cp/Make-lang.in (cp-lang.o): Depends on c-common.h. 	* cp/cp-lang.c (c-common.h): Include. 	(LANG_HOOKS_EXPAND_CONSTANT, LANG_HOOKS_SAFE_FROM_P): New hooks. 	* cp/decl.c (cxx_init_decl_processing): Don't se

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1173,7 +1173,7 @@ c-typeck.o : c-typeck.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
 c-lang.o : c-lang.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
     $(GGC_H) c-lex.h toplev.h diagnostic.h output.h function.h $(VARRAY_H) \
     $(RTL_H) $(EXPR_H) tree-inline.h insn-config.h integrate.h langhooks.h \
-    langhooks-def.h
+    langhooks-def.h c-common.h
 c-lex.o : c-lex.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) c-lex.h \
     debug.h $(C_TREE_H) \
     c-pragma.h input.h intl.h flags.h toplev.h output.h \
@@ -1394,7 +1394,7 @@ errors.o : errors.c $(GCONFIG_H) $(SYSTEM_H) errors.h
 varasm.o : varasm.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
    function.h $(EXPR_H) hard-reg-set.h $(REGS_H) $(OBSTACK_H) \
    output.h c-pragma.h toplev.h xcoffout.h debug.h $(GGC_H) $(TM_P_H) \
-   $(HASHTAB_H) $(TARGET_H)
+   $(HASHTAB_H) $(TARGET_H) langhooks.h
 function.o : function.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    function.h $(EXPR_H) libfuncs.h $(REGS_H) hard-reg-set.h \
    insn-config.h $(RECOG_H) output.h toplev.h except.h hash.h $(GGC_H) $(TM_P_H)
@@ -1408,7 +1408,7 @@ except.o : except.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
 expr.o : expr.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h function.h \
    $(REGS_H) $(EXPR_H) $(OPTABS_H) libfuncs.h insn-attr.h insn-config.h \
    $(RECOG_H) output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h \
-   except.h reload.h $(GGC_H) intl.h $(TM_P_H)
+   except.h reload.h $(GGC_H) langhooks.h intl.h $(TM_P_H)
 builtins.o : builtins.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    $(TARGET_H) function.h $(REGS_H) $(EXPR_H) $(OPTABS_H) insn-config.h \
    $(RECOG_H) output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h \
