* cfgbuild.c (inside_basic_block_p, control_flow_insn_p): Break out from ... 	(count_basic_blocks): ... here. 	(find_basic_blocks, find_bb_boundaries): Cleanup.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47418 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+Wed Nov 28 13:51:24 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgbuild.c (inside_basic_block_p, control_flow_insn_p): Break out from ...
+	(count_basic_blocks): ... here.
+	(find_basic_blocks, find_bb_boundaries): Cleanup.
+
 Tue Nov 27 01:07:51 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (estimate_probability): Refine pointer heuristic;
