* configure.in (target_list): Add generated-manpages. 	* configure: Regenerate. 	* Makefile.in (generated-manpages): Depend on 	lang.generated-manpages. 	* objc/Make-lang.in (objc.generated-manpages): New dummy target.
ada:
	* Make-lang.in (ada.generated-manpages): New dummy target.

ch:
	* Make-lang.in (CHILL.generated-manpages): New dummy target.

cp:
	* Make-lang.in (c++.generated-manpages): New dummy target.

f:
	* Make-lang.in (f77.generated-manpages): New target.
	($(srcdir)/f/g77.1): Don't check $(GENERATED_MANPAGES).  Allow
	manpage generation to fail.
	(f77.info): Don't depend on $(srcdir)/f/g77.1.
	(f77.install-man): Depend on $(GENERATED_MANPAGES) rather than
	directly on $(srcdir)/g77.1.

java:
	* Make-lang.in (java.generated-manpages): New dummy target.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47442 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2361,7 +2361,8 @@ cppinternals.dvi: $(docdir)/cppinternals.texi
 	$(TEXI2DVI) -I $(docdir) -I $(docdir)/include $(docdir)/cppinternals.texi
 
 generated-manpages: $(docdir)/gcov.1 $(docdir)/cpp.1 $(docdir)/gcc.1 \
-	 $(docdir)/gfdl.7 $(docdir)/gpl.7 $(docdir)/fsf-funding.7
+	 $(docdir)/gfdl.7 $(docdir)/gpl.7 $(docdir)/fsf-funding.7 \
+	 lang.generated-manpages
 
 $(docdir)/gcov.1: $(docdir)/gcov.texi
 	$(STAMP) $(docdir)/gcov.1
