--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -250,6 +250,7 @@ ada.start.encap:
 ada.rest.encap: 
 ada.info:
 ada.dvi:
+ada.generated-manpages:
 
 # Install hooks:
 # gnat1 is installed elsewhere as part of $(COMPILERS).
