--- a/gcc/f/Make-lang.in
+++ b/gcc/f/Make-lang.in
@@ -151,10 +151,9 @@ f77.all.cross: g77-cross$(exeext)
 f77.start.encap: g77$(exeext)
 f77.rest.encap:
 
-# Note the kludge to get g77.1 to build.
-
-f77.info: $(srcdir)/f/g77.info $(srcdir)/f/g77.1
+f77.info: $(srcdir)/f/g77.info
 f77.dvi: f/g77.dvi
+f77.generated-manpages: $(srcdir)/f/g77.1
 
 # g77 documentation.
 $(srcdir)/f/g77.info: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
@@ -178,13 +177,11 @@ f/g77.dvi: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
 	cd f && $(TEXI2DVI) -I $$s/doc/include $$s/f/g77.texi
 
 $(srcdir)/f/g77.1: $(srcdir)/f/invoke.texi
-	if [ x$(GENERATED_MANPAGES) = xgenerated-manpages ]; then \
-          $(TEXI2POD) < $(srcdir)/f/invoke.texi > f/g77.pod; \
-          ($(POD2MAN) --section=1 f/g77.pod > f/g77.1.T$$$$ && \
-              mv -f f/g77.1.T$$$$ $(srcdir)/f/g77.1) || \
-              (rm -f f/g77.1.T$$$$ && exit 1); \
-          rm -f f/g77.pod; \
-	else true; fi
+	-$(TEXI2POD) < $(srcdir)/f/invoke.texi > f/g77.pod; \
+	($(POD2MAN) --section=1 f/g77.pod > f/g77.1.T$$$$ && \
+	    mv -f f/g77.1.T$$$$ $(srcdir)/f/g77.1) || \
+	    (rm -f f/g77.1.T$$$$ && exit 1); \
+	rm -f f/g77.pod; \
 
 # This dance is all about producing accurate documentation for g77's
 # intrinsics with minimum fuss.  f/ansify appends "\n\" to C strings
@@ -292,7 +289,7 @@ f77.install-info: f77.info installdirs
 	  else : ; fi; \
 	else : ; fi
 
-f77.install-man: $(srcdir)/f/g77.1 installdirs
+f77.install-man: $(GENERATED_MANPAGES) installdirs
 	-if [ -f f771$(exeext) ] ; then \
 	  if [ -f g77-cross$(exeext) ] ; then \
 	    rm -f $(man1dir)/$(G77_CROSS_NAME)$(man1ext); \
