* Makefile.am (nat_headers, x_nat_headers): Depend on .class files, not 	libgcj.jar. 	(nat_files, x_nat_files): Build native files in subdirectories using 	the same dependency options as the java files. 	(gnu/gcj/runtime/FirstThread.h): Remove explicit rule and friend 	declarations. 	* configure.in: Put dependencies for .cc files in deps.mak. 	* Makefile.in: Rebuilt. 	* configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47471 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -886,17 +886,19 @@ esac
 # builddir for the .java files.
 h=`pwd`
 : > deps.mk
-( (cd $srcdir && find . -name '*.java' -print) ;
-  find . -name '*.java' -print) | \
+( (cd $srcdir && find . \( -name '*.java' -o -name '*.cc' \) -print) ;
+  find . \( -name '*.java' -o -name '*.cc' \) -print) | \
    fgrep -v testsuite | \
-   sed -e 's/\.java/.d/' | \
+   sed -e 's/\.java/.d/'\;'s/\.cc/.d/' | \
    while read f; do
       echo "include $f" >> deps.mk
       test -f $f || {
 changequote(<<,>>)
 	 d=`echo $f | sed -e 's,/[^/]*$,,'`
 changequote([,])
-	 $libgcj_basedir/../mkinstalldirs $d
+	 if test ! -d $d; then
+	   $libgcj_basedir/../mkinstalldirs $d
+	 fi;
 	 echo > $f
       }
    done
